pdp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdp-service
spec:
  selector:
    app: pdp-service
  ports:
    - protocol: TCP
      port: 5059
      targetPort: 5059
  type: ClusterIP
