ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdp-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.pdp.in.bank.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pdp-service
                port:
                  number: 5059
